2021-05-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (URL): Add GitHub repo to URL field

2021-01-10  Dirk Eddelbuettel  <edd@debian.org>

        * .github/workflows/ci.yaml: Add CI runner using r-ci
	* README.md: Add new badge

2020-04-27  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add 'last commit' badge

	* configure: Change shebang to #!/bin/sh

2018-12-23  Dirk Eddelbuettel  <edd@debian.org>

 	* NAMESPACE: Add .registration=TRUE to useDynLib()

2018-11-16  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.3

2018-11-15  Dirk Eddelbuettel  <edd@debian.org>

	* src/getconf.cpp: Do not run examples on Solaris
	* src/RcppExports.cpp: Updated
	* R/RcppExports.R: Idem
	* man/getAll.Rd: Idem
	* man/getConfig.Rd: Idem

2016-08-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version): Release 0.0.2

2016-07-29  Dirk Eddelbuettel  <edd@debian.org>

	* src/getconf.cpp: Minor cleanup; use explicit Rcpp:: namespace

2016-07-29  Qiang Kou <qkou@umail.iu.edu>

	* src/getconf.cpp: Redefine struct in more portable way

2016-07-28  Dirk Eddelbuettel  <edd@debian.org>

	* src/getconf.cpp (getConfig): New function
	* man/getConfig.Rd: Documentation

2016-07-26  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version): Initial version 0.0.1
